# client-onboarding-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  architecture.mmd  docker-compose.yml  requirements.txt  setup.sh  stack.json  teardown.md
dagster_project/: dagster.yaml  pyproject.toml  workspace.yaml
dagster_project/pipeline/: definitions.py  resources.py  schedules.py  sensors.py
dagster_project/pipeline/assets/: dbt_assets.py  ingestion.py
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/macros/: generate_surrogate_key.sql
dbt_project/models/bronze/: _sources.yml  br_app__customers.sql  br_google__spend.sql  br_meta__spend.sql
dbt_project/models/gold/: _gold.yml  agg_channel_performance.sql  dim_campaign.sql  dim_date.sql  fct_daily_spend.sql
dbt_project/models/silver/: _silver.yml  stg_customers.sql  stg_spend.sql
dbt_project/seeds/: channel_mapping.csv
dbt_project/snapshots/: snap_customers.sql
dbt_project/tests/: assert_spend_is_non_negative.sql
ingestion/: extract_customers.py  extract_google.py  extract_meta.py  seed_data.py
