[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:BuildBackend"

[project]
name = "pipeline"
version = "0.1.0"
dependencies = [
    "dagster==1.8.13",
    "dagster-webserver==1.8.13",
    "dagster-dbt==0.24.13",
    "dagster-duckdb==0.24.13",
    "dbt-duckdb==1.8.4",
    "pandas==2.2.3",
    "duckdb==1.1.3",
    "numpy>=1.26.0",
]

[tool.setuptools.packages.find]
where = ["."]
